Adding new tab open function to all links
Adding new tab open function to all links

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #3D9970;
+
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -160,6 +161,7 @@ sup {
 
 a {
   color: #3D9970;
+
   text-decoration: none;
   background-color: transparent;
 }
@@ -2440,7 +2442,9 @@ fieldset:disabled a.btn {
 .btn-primary {
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .btn-primary:hover {
   color: #fff;
@@ -2456,7 +2460,9 @@ fieldset:disabled a.btn {
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2679,24 +2685,31 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary {
   color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .btn-outline-primary:hover {
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
   color: #3D9970;
+
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
@@ -2880,6 +2893,7 @@ fieldset:disabled a.btn {
 .btn-link {
   font-weight: 400;
   color: #3D9970;
+
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3157,6 +3171,7 @@ input[type=button].btn-block {
   color: #fff;
   text-decoration: none;
   background-color: #3D9970;
+
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3486,7 +3501,9 @@ input[type=button].btn-block {
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
   border-color: #3D9970;
+
   background-color: #3D9970;
+
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
@@ -3542,7 +3559,9 @@ input[type=button].btn-block {
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
   border-color: #3D9970;
+
   background-color: #3D9970;
+
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3745,6 +3764,7 @@ input[type=button].btn-block {
   height: 1rem;
   margin-top: -0.25rem;
   background-color: #3D9970;
+
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3774,6 +3794,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   background-color: #3D9970;
+
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3806,6 +3827,7 @@ input[type=button].btn-block {
   margin-right: 0.2rem;
   margin-left: 0.2rem;
   background-color: #3D9970;
+
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3927,6 +3949,7 @@ input[type=button].btn-block {
 .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #3D9970;
+
 }
 
 .nav-fill > .nav-link,
@@ -4578,6 +4601,7 @@ input[type=button].btn-block {
   margin-left: -1px;
   line-height: 1.25;
   color: #3D9970;
+
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4607,7 +4631,9 @@ input[type=button].btn-block {
   z-index: 3;
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4684,6 +4710,7 @@ a.badge:hover, a.badge:focus {
 .badge-primary {
   color: #fff;
   background-color: #3D9970;
+
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4963,6 +4990,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   text-align: center;
   white-space: nowrap;
   background-color: #3D9970;
+
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5044,7 +5072,9 @@ a.badge-dark:focus, a.badge-dark.focus {
   z-index: 2;
   color: #fff;
   background-color: #3D9970;
+
   border-color: #3D9970;
+
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -10080,6 +10110,7 @@ p.lead {
 }
 .social-icons .social-icon:hover {
   background-color: #3D9970;
+;
 }
 
 .dev-icons {
